# event-sourcing

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: postgres.rs
src/: aggregate.rs  event.rs  event_list_builder.rs  event_store.rs  event_store_builder.rs  into_event_list.rs  lib.rs
src/adapter/: event_store_adapter.rs  mod.rs  notification_adapter.rs
src/adapter/amqp/: amqp_adapter.rs  mod.rs
src/adapter/in_memory/: in_memory_adapter.rs  mod.rs
src/adapter/postgres/: mod.rs  postgres_adapter.rs  postgres_repository_old.rs
src/adapter/pubsub/: mod.rs  pubsub_adapter.rs
src/error/: adapter_error.rs  create_error.rs  mod.rs  store_error.rs
